--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,20 @@
       </plugin>
     </plugins>
   </build>
+  
+  <repositories>
+		<repository>
+		    <id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+	
   <dependencies>
 		<dependency>
-    		<groupId>org.graphstream</groupId>
+    		<groupId>com.github.graphstream</groupId>
     		<artifactId>gs-core</artifactId>
-    		<version>2.0.0-SNAPSHOT</version>
-    		<scope>compile</scope>
-    	</dependency>
+    		<version>2.0-alpha</version>
+		</dependency>
     	<dependency>
     		<groupId>org.graphstream</groupId>
     		<artifactId>gs-algo</artifactId>
