--- a/pom.xml
+++ b/pom.xml
@@ -57,15 +57,15 @@
     		<version>2.0-alpha</version>
 		</dependency>
     	<dependency>
-    		<groupId>org.graphstream</groupId>
+    		<groupId>com.github.graphstream</groupId>
     		<artifactId>gs-algo</artifactId>
-    		<version>2.0.0-SNAPSHOT</version>
+    		<version>2.0-alpha</version>
     		<scope>compile</scope>
     	</dependency>
     	<dependency>
-    		<groupId>org.graphstream</groupId>
+    		<groupId>com.github.graphstream</groupId>
     		<artifactId>gs-ui-javafx</artifactId>
-    		<version>0.0.1-SNAPSHOT</version>
+    		<version>2.0-alpha</version>
     		<scope>compile</scope>
     	</dependency>
     	<dependency>
